--- a/index.css
+++ b/index.css
@@ -45,6 +45,29 @@ nav ul li:hover {
 nav ul li:hover a {
     color: #E34C80;
 }
+.logo {
+    width: 300px;
+    height: 100px;
+}
+.logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@media (max-width: 768px) {
+    .logo {
+        width: 200px;
+        height: 70px;
+    }
+}
+
+@media (max-width: 480px) {
+    .logo {
+        width: 150px;
+        height: 50px;
+    }
+}
 @media (max-width: 768px) {
     nav ul {
         flex-direction: column;
