finish last page

--- a/index.css
+++ b/index.css
@@ -13,6 +13,32 @@ ul , a{
     margin: 0 auto;
     padding: 20px;
 }
+button {
+    background-color: #E34C80;
+
+    border: 1px solid #E34C80;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
+    transition: background-color 0.3s ease;
+
+}
+
+ button a {
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+ button:hover a {
+    color: #E34C80;
+}
+ button:hover {
+    background-color: white;
+    color: #E34C80;
+}
+/* القائمة الرئيسية */
 nav{
     background-color:#E34C80;
     color: white;
@@ -76,3 +102,124 @@ nav ul li:hover a {
         text-align: center;
     }
 }
+
+/* القائمة الرئيسية */
+
+/* الصورة الرئيسية  */
+
+.hero-section {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./assests/cake.jpg');
+    background-size: cover;
+    background-position: center;
+    padding: 100px 0;
+    text-align: center;
+    width: 100%;
+    height: calc(100vh - 140px);
+    color: white;
+    display: flex;
+    justify-content: center;
+}
+.hero-section .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.hero-section h1 {
+    font-size: 48px;
+    margin-bottom: 20px;
+}
+
+
+
+/* الصورة الرئيسية  */
+
+/*  قسم خدماتنا */
+
+.services-section {
+    width: 100%;
+    padding: 100px 0;
+    background-color: #F9F9F9;
+    text-align: center;
+}
+
+.services-section h2 {
+    font-size: 36px;
+    margin-bottom: 20px;
+    color: #E34C80;
+}
+
+
+.services-section .services {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.services-section .services .service {
+    width: 100%;
+    max-width: 1000px;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
+
+.services-section .services .service img {
+    flex: 1;
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+.services-section .services .service .content {
+    text-align: right;
+    width: 60%;
+}
+.services-section p {
+    font-size: 18px;
+    margin-bottom: 40px;
+    color: #666;
+}
+.services-section h3 {
+    margin-bottom: 40px;
+    color: #666;
+    font-weight: 700; 
+}
+
+
+@media (max-width: 768px) {
+    .services-section .services .service {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .services-section .services .service img {
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 480px) {
+    .services-section h2 {
+        font-size: 28px;
+    }
+
+    .services-section p {
+        font-size: 16px;
+    }
+
+    .services-section .services .service img {
+        width: 200px;
+        height: 200px;
+    }
+}
+/*  قسم خدماتنا */
