finish first  page

--- a/index.css
+++ b/index.css
@@ -223,3 +223,45 @@ nav ul li:hover a {
     }
 }
 /*  قسم خدماتنا */
+
+
+
+/* القائمة السفلية */
+
+.footer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin: 40px 0;
+    text-align: center;
+}
+
+.nav-links {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.nav-links a {
+    text-decoration: none;
+    color: gray;
+    font-weight: 500;
+    transition: color 0.3s;
+}
+
+.nav-links a:hover {
+    color: black;
+}
+
+.social-icons {
+    display: flex;
+    gap: 15px;
+}
+
+.copyright {
+    color: #555;
+    font-weight: 500;
+}
+/* القائمة السفلية */
